--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ href="https://fonts.googleapis.com/css?family=Tangerine">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
 
 <body onload="initialize();">
-
+<!-- Samin Sarwar Web Dev 7-8 Even 11/28 Calorie Calculator -->
 <h1 class="title">Calorie Calculator</h1>
 <div class="grid">
 <div class ="app">
